[package]
name = "arweave-randomx-rs"
description = "Rust bindings for the RandomX Proof-of-Work"
authors = ["The Tari Development Community", "The People of the Network"]
repository = "https://github.com/ThePeopleOfTheNetwork/arweave-randomx-rs"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "1.2.1"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# Create a dynamic library for C usage and a rust library so it can be called from rust
crate-type = ["cdylib", "lib"]

[dependencies]
libc = "0.2.121"
bitflags = "1.3.2"
thiserror = "1.0.30"

[dev-dependencies]
hex = "0.4.3"
